small layout improvements (slightly bigger icons); z-index fix

--- a/grails-app/assets/stylesheets/layout.css
+++ b/grails-app/assets/stylesheets/layout.css
@@ -635,12 +635,16 @@ strong {
 .antonymMarker {
     margin-left: 2px;
     padding-right: 3px;
+    position: relative;
+    top: 3px;
 }
 
 .commentMarker {
     margin-left: 2px;
     padding-left: 3px;
     padding-right: 3px;
+    position: relative;
+    top: 3px;
 }
 
 .searchResultPopup {
@@ -852,6 +856,7 @@ strong {
   padding: 6px;
   min-width: 100px;
   max-width: 300px;
+  z-index: 9999;
   -webkit-box-shadow: 0 0 8px 3px rgba(0,0,0,0.3);
   -moz-box-shadow: 0 0 8px 3px rgba(0,0,0,0.3);
   box-shadow: 0 0 8px 3px rgba(0,0,0,0.3);
